# luna_ros

./: .gitignore  .gitmodules  Commands to run and what.txt  Dockerfile  entrypoint.sh  run_ros_image.sh
ros2_ws/install/luna_control/include/luna_control/: luna_controller_parameters.hpp
ros2_ws/install/luna_control/include/luna_control/luna_control/: LunaController.hpp  odometry.hpp  speed_limiter.hpp
ros2_ws/install/luna_control/share/luna_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  luna_plugin.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/lunabot_2425/share/lunabot_2425/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/quad_swerve_controller/share/quad_swerve_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/teleop_twist_keyboard/share/teleop_twist_keyboard/: package.sh  package.xml
ros2_ws/install/twist_stamper/lib/twist_stamper/: twist_stamper  twist_unstamper
ros2_ws/install/twist_stamper/share/twist_stamper/: package.sh  package.xml
ros2_ws/log/: latest_build
ros2_ws/src/fiducial_localizer/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/fiducial_localizer/fiducial_localizer/: marker_localizer.py  tft_shim.py
ros2_ws/src/fiducial_localizer/launch/: fiducial_localizer.launch.py
ros2_ws/src/fiducial_localizer/resource/: fiducial_localizer
ros2_ws/src/helpers/: fiducial_overlay_rclpy.py  pose_print_rclpy.py  show_image_rclpy.py
ros2_ws/src/luna_control/include/luna_control/: LunaController.hpp
ros2_ws/src/luna_control/src/: LunaController.cpp
ros2_ws/src/lunabot_2425/config/: gz_bridge.config.yaml  robot_controllers.yaml
ros2_ws/src/lunabot_2425/description/: robot_core.xacro  ros2_control.xacro
ros2_ws/src/lunabot_2425/launch/: gz_bringup.launch.py  rv_gz_bringup.launch.py  simple.launch.py  view.launch.py
ros2_ws/src/lunabot_2425/stl/: back_left_knuckle_meter.stl  back_left_wheel_meter.stl  back_right_knuckle_meter.stl  back_right_wheel_meter.stl  bucket_mo.stl  front_left_knuckle_meter.stl  front_left_wheel_meter.stl  front_right_knuckle_meter.stl  front_right_wheel_meter.stl  knuckle_mo.stl  left_rocker_meter.stl  left_rocker_mo.stl  right_rocker_meter.stl  right_rocker_mo.stl  wheel_mo.stl
ros2_ws/src/quad_swerve_controller/: CMakeLists.txt  package.xml  quad_swerve_controller.xml
ros2_ws/src/quad_swerve_controller/include/quad_swerve_controller/: motor_interface.hpp  quad_swerve_controller.hpp
ros2_ws/src/quad_swerve_controller/src/: quad_swerve_controller.cpp
(+63 files in other folders)
